%%{init: {
  "theme": "base",
  "themeVariables": {
    "primaryColor": "#ffffff",
    "primaryBorderColor": "#5a6278",
    "primaryTextColor": "#2f3152",
    "tertiaryColor": "#eef4ff",
    "lineColor": "#40455d",
    "fontFamily": "Arial, Helvetica, sans-serif"
  }
}}%%
stateDiagram-v2
    direction TB
    state "Sync Pending" as SyncPending
    state "Synchronized" as Synchronized
    [*] --> Scheduled
    Scheduled --> Due: Appointment date arrives
    Scheduled --> Administered: Early dose is recorded
    Due --> Administered: On-time dose is recorded
    Due --> Overdue: 24 hours elapse
    Overdue --> Defaulter: 7 days elapse
    Defaulter --> Administered: Catch-up dose is recorded

    state Administered {
        [*] --> SyncPending
        SyncPending --> Synchronized: Connectivity is restored
    }

    Administered --> [*]: Record is archived
